@@ -3,6 +3,7 @@
 	- API: Allow non-numbers as "clientver" for the login command
 	- API: Added "image_nsfw" member to "get vn"
 	- API: Added "results" option to the "get .. {}"
+	- API: Increased the maximum number of results for the "get" command to 25
 
 2.14 - 2010-11-28
 	- Improved filter selection interface for the release and VN browser
